--- a/flexbox.html
+++ b/flexbox.html
@@ -7,26 +7,31 @@
     <title>FlexBox</title>
     <style>
         .father{
-             /* flex 는 father에게 명령한 규칙은 children items들에게 영향을 끼치게 된다. */
-            display: flex; /* 밑바탕에 깔리 규칙을 axis 축이라고 한다. */
-            flex-direction: row;/* flex-direction: row  일 때 colum일 경우에는 수직 수평이 반대로 적용 */
-            justify-content: space-around; /* main axis는 justify-centent */
-            align-items: flex-end; /* corss axis는 align-items가 영향을 주는 축 */
+            display: flex; 
+            flex-wrap: wrap; /* flexbox가 with 등의 속성들을 쓸때 default = nonwrap */
+            justify-content: center; 
             height: 100vh;
+            flex-direction: row-reverse;
         }
         .box{
             width: 300px;
             height: 300px;
             background-color: blue;
+            border: 1px solid white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 50px;
         }
     </style>
 </head>
 <body>
 
     <div class="father">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
     </div>
     
 </body>
