--- a/flexbox.html
+++ b/flexbox.html
@@ -8,7 +8,7 @@
     <style>
         .father{
             display: flex; 
-            justify-content: center; 
+            justify-content: space-between; 
             height: 100vh;
             flex-wrap: wrap;
         }
@@ -25,7 +25,7 @@
         }
         .box:first-child{
             /* align-self는 아ㅠ의 align이 의미하듯이 cross-axis에서 각각의 아이템에 대해 정렬하는것 */
-            align-self: flex-end;
+            /* align-self: flex-end; */
         }
     </style>
 </head>
@@ -35,6 +35,11 @@
             <div class="box">1</div>
             <div class="box">2</div>
             <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+            
     </div>
     
 </body>
