Auto Rows and Columns

--- a/flexbox.html
+++ b/flexbox.html
@@ -24,7 +24,7 @@
             font-size: 50px;
         }
         .box:first-child{
-            /* align-self는 아ㅠ의 align이 의미하듯이 cross-axis에서 각각의 아이템에 대해 정렬하는것 */
+            /* align-self는 앞의 align이 의미하듯이 cross-axis에서 각각의 아이템에 대해 정렬하는것 */
             /* align-self: flex-end; */
         }
     </style>
