--- a/grid.html
+++ b/grid.html
@@ -8,9 +8,13 @@
   <style>
     .father{
       display: grid;
-      grid-template-columns: 30px 50px;
+      grid-template-columns: 30px 15px;
       grid-template-rows: 30px 12px;
       grid-gap: 10px;
+      grid-auto-rows: 60px;
+      /* template c,r 이상되는 항목에 대하여 설정 */
+      grid-auto-flow: column;
+      /* 방향 설정 */
     }
     .box{
       background-color: #f1c40f;
@@ -19,6 +23,10 @@
 </head>
 <body>
   <div class="father">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
