--- a/grid.html
+++ b/grid.html
@@ -10,23 +10,19 @@
       display: grid;
       grid-auto-rows: 20px;
       grid-gap: 5px;
-      grid-template-areas: "header header header" "content content sidebar" "content content sidebar" "footer footer footer";
-
+      grid-template-columns: repeat(3,1fr) 4fr;
+      /* grid-template-columns: 2fr 1fr 2fr 1fr; */
     }
     .first{
-      grid-area: header;
       background-color: #f1c40f;
     }
     .second{
-      grid-area: sidebar;
       background-color: #27ae60;
     }
     .third{
-      grid-area: footer;
       background-color: #3498db;
     }
     .fourth{
-      grid-area: content;
       background-color: #d35400;
     }
 
