--- a/grid.html
+++ b/grid.html
@@ -9,38 +9,36 @@
   <style>
     .father {
       display: grid;
-      grid-auto-rows: 200px;
-      grid-gap: 5px;
-      grid-template-columns: min-content repeat(3, 1fr);
-      /* grid-template-columns: minmax(400px, 2fr) repeat(3, 1fr); */
-
+      grid-gap: 10px;
+      grid-auto-rows: 100px;
+      grid-template-columns:  repeat(auto-fit, minmax(350px,1fr));
     }
 
-    .first {
-      background-color: #f1c40f;
+    .box:nth-child(even){
+      background-color: #3498db
     }
-
-    .second {
-      background-color: #27ae60;
-    }
-
-    .third {
-      background-color: #3498db;
-    }
-
-    .fourth {
-      background-color: #d35400;
+    .box:nth-child(odd){
+      background-color: #34495e
     }
   </style>
 </head>
 
 <body>
   <div class="father">
-    <div class="first">content content content content content content </div>
-    <div class="second"></div>
-    <div class="third"></div>
-    <div class="fourth"></div>
-  </div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    
+</div>
 </body>
 
 </html>
