--- a/grid.html
+++ b/grid.html
@@ -11,7 +11,10 @@
       display: grid;
       grid-gap: 10px;
       grid-auto-rows: 100px;
-      grid-template-columns:  repeat(auto-fit, minmax(350px,1fr));
+      grid-template-columns:  repeat(5,100px);
+      color:white;
+      place-content: center end;
+      height: 100vh;
     }
 
     .box:nth-child(even){
@@ -25,19 +28,11 @@
 
 <body>
   <div class="father">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
 </div>
 </body>
 
