Justify Items, Align Items and Place Items

--- a/grid.html
+++ b/grid.html
@@ -14,6 +14,7 @@
       grid-template-columns:  repeat(5,100px);
       color:white;
       place-content: center end;
+      place-Items: center center;
       height: 100vh;
     }
 
