--- a/grid.html
+++ b/grid.html
@@ -11,18 +11,29 @@
       display: grid;
       grid-gap: 10px;
       grid-auto-rows: 100px;
-      grid-template-columns:  repeat(5,100px);
-      color:white;
-      place-content: center end;
-      place-Items: center center;
-      height: 100vh;
+      grid-template-columns: repeat(5, 1fr);
     }
 
-    .box:nth-child(even){
+    .box {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+    }
+
+    .box:nth-child(even) {
       background-color: #3498db
     }
-    .box:nth-child(odd){
+
+    .box:nth-child(odd) {
       background-color: #34495e
+    }
+
+    .box:first-child {
+      /* grid-column: 1/3; */
+      grid-column-start: 1;
+      grid-column-end: 4;
+
     }
   </style>
 </head>
@@ -34,7 +45,13 @@
     <div class="box">3</div>
     <div class="box">4</div>
     <div class="box">5</div>
-</div>
+    <div class="box">6</div>
+    <div class="box">7</div>
+    <div class="box">8</div>
+    <div class="box">9</div>
+    <div class="box">10</div>
+    <div class="box">11</div>
+  </div>
 </body>
 
 </html>
