--- a/grid.html
+++ b/grid.html
@@ -11,6 +11,7 @@
       display: grid;
       grid-gap: 10px;
       grid-auto-rows: 100px;
+      grid-auto-flow: dense;
       grid-template-columns: repeat(5, 1fr);
     }
 
@@ -31,8 +32,8 @@
 
     .box:first-child {
       /* grid-column: 1/3; */
-      grid-column-start: 1;
-      grid-column-end: 4;
+      grid-column-start: 3;
+      grid-column-end: 5;
 
     }
   </style>
