--- a/grid.html
+++ b/grid.html
@@ -11,7 +11,6 @@
       display: grid;
       grid-gap: 10px;
       grid-auto-rows: 100px;
-      grid-auto-flow: dense;
       grid-template-columns: repeat(5, 1fr);
     }
 
@@ -32,8 +31,9 @@
 
     .box:first-child {
       /* grid-column: 1/3; */
-      grid-column-start: 3;
-      grid-column-end: 5;
+      /* grid-row-start: 1;
+      grid-row-end: 5; */
+      grid-row: span 2;
 
     }
   </style>
