--- a/grid.html
+++ b/grid.html
@@ -30,11 +30,9 @@
     }
 
     .box:first-child {
-      /* grid-column: 1/3; */
-      /* grid-row-start: 1;
-      grid-row-end: 5; */
-      grid-row: span 2;
-
+      /* grid-area: 2/1/4/-1; */
+      /* row start /column start /row end /column end */
+      grid-area: span 2/ span 3;
     }
   </style>
 </head>
