--- a/grid.html
+++ b/grid.html
@@ -30,9 +30,9 @@
     }
 
     .box:first-child {
-      /* grid-area: 2/1/4/-1; */
-      /* row start /column start /row end /column end */
-      grid-area: span 2/ span 3;
+      /* justify-self: start;
+      align-self: end; */
+      place-self: start center;
     }
   </style>
 </head>
