--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <li><a href="#" target="_blank">Link</a></li>
+  <li><a href="#" target="_blank">Link</a></li>
+  <li class="target"><a href="#" target="_blank">Link</a></li>
+  <li><a href="#" target="_blank">Link</a></li>
+  <li><a href="#" target="_blank">Link</a></li>
+  <li><a href="#" target="_blank">Link</a></li>
+  <li><a href="#" target="_blank">Link</a></li>
+  <li><a href="#" target="_blank">Link</a></li>
 </body>
 </html>
