--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,26 @@
   <title>Advanced Css4</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <li><a href="#" target="_blank">Link</a></li>
-  <li><a href="#" target="_blank">Link</a></li>
-  <li class="target"><a href="#" target="_blank">Link</a></li>
-  <li><a href="#" target="_blank">Link</a></li>
-  <li><a href="#" target="_blank">Link</a></li>
-  <li><a href="#" target="_blank">Link</a></li>
-  <li><a href="#" target="_blank">Link</a></li>
-  <li><a href="#" target="_blank">Link</a></li>
+  <nav>
+    <li><a href="#" target="_blank">Link</a></li>
+    <li><a href="#" target="_blank">Link</a></li>
+    <li class="target"><a href="#" target="_blank">Link</a></li>
+    <li><a href="#" target="_blank">Link</a></li>
+    <li><a href="#" target="_blank">Link</a></li>
+    <li><a href="#" target="_blank">Link</a></li>
+    <li><a href="#" target="_blank">Link</a></li>
+    <li><a href="#" target="_blank">Link</a></li>
+  </nav>
+
+  <h1>LaLaLa</h1>
+  <h2>LaLaLa</h2>
+  <h3>LaLaLa</h3>
+  <h4>LaLaLa</h4>
+  <h5>LaLaLa</h5>
+  <h6>LaLaLa</h6>
+
 </body>
+
 </html>
