--- a/index.html
+++ b/index.html
@@ -5,16 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Advanced Css4</title>
+  <title>Project One</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
-  <main>
-    <section>
-      <li><a href="">hello</a></li>
-    </section>
+  <header class="header threeGrid">
+    <h1>▲❚</h1>
+    <div class="header__column">
+      <ul class="header__nav">
+        <span>Information</span>
+        <li>About</li>
+        <li>News</li>
+        <li>Press</li>
+      </ul>
+      <ul class="header__nav">
+        <span>Portfolio</span>
+        <li>Products</li>
+        <li>Graphics</li>
+        <li>Sounds</li>
+      </ul>
+    </div>
+    <div class="header__column">
+      <ul class="header__nav">
+        <span>Network</span>
+        <li>Facebook</li>
+        <li>Instagram</li>
+        <li>Youtube</li>
+      </ul>
+    </div>
+  </header>
+  <main class="grid threeGrid">
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
+    <div class="grid__item"></div>
   </main>
 
 </body>
