--- a/index.html
+++ b/index.html
@@ -10,48 +10,45 @@
 </head>
 
 <body>
-  <header class="header threeGrid">
-    <h1>▲❚</h1>
-    <div class="header__column">
-      <ul class="header__nav">
-        <span>Information</span>
-        <li>About</li>
-        <li>News</li>
-        <li>Press</li>
-      </ul>
-      <ul class="header__nav">
-        <span>Portfolio</span>
-        <li>Products</li>
-        <li>Graphics</li>
-        <li>Sounds</li>
-      </ul>
-    </div>
-    <div class="header__column">
-      <ul class="header__nav">
-        <span>Network</span>
-        <li>Facebook</li>
-        <li>Instagram</li>
-        <li>Youtube</li>
-      </ul>
-    </div>
+  <header class="header">
+    <h1 class="header__title">Add meals</h1>
   </header>
-  <main class="grid threeGrid">
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-    <div class="grid__item"></div>
-  </main>
+  <nav class="navigaiton">
+    <ul class="navigation__list">
+      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🥪</span></span><span class="item__text">All</span></li>
+      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🍕</span></span><span class="item__text">Pizza</span></li>
+      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🥩</span></span><span class="item__text">Meat</span></li>
+      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🥗</span></span><span class="item__text">Veggies</span></li>
+    </ul><span class="icon__emoji">
+    </span>
+  </nav>
+  <section class="featured">
+    <h2 class="featured__title">Featured meals</h2>
+    <div class="featured__wrapper">
+      <article class="featured-meal">
+        <h4 class="featured-meal__title">Penne Broccoli</h4>
+        <button class="featured-meal__button"><span>➕</span></button>
+      </article>
+      <article class="featured-meal">
+        <h4 class="featured-meal__title">Penne Broccoli</h4>
+        <button class="featured-meal__button"><span>➕</span></button>
+      </article>
+      <article class="featured-meal">
+        <h4 class="featured-meal__title">Penne Broccoli</h4>
+        <button class="featured-meal__button"><span>➕</span></button>
+      </article>
+      <article class="featured-meal">
+        <h4 class="featured-meal__title">Penne Broccoli</h4>
+        <button class="featured-meal__button"><span>➕</span></button>
+      </article>
+    </div>
+  </section>
+  <section class="recipes">
+    <ul class="recipes__list">
+      <li class="recipe"><span class="recipe__name">Pasta Carbonara</span><button class="recipe__btn">➕</button></li>
+      <li class="recipe"><span class="recipe__name">Lasagna</span><button class="recipe__btn">➕</button></li>
+    </ul>
+  </section>
 
 </body>
 
