--- a/index.html
+++ b/index.html
@@ -11,44 +11,42 @@
 
 <body>
   <header class="header">
-    <h1 class="header__title">Add meals</h1>
-  </header>
-  <nav class="navigaiton">
-    <ul class="navigation__list">
-      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🥪</span></span><span class="item__text">All</span></li>
-      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🍕</span></span><span class="item__text">Pizza</span></li>
-      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🥩</span></span><span class="item__text">Meat</span></li>
-      <li class="navigation__item"><span class="item__icon"><span class="icon__emoji">🥗</span></span><span class="item__text">Veggies</span></li>
-    </ul><span class="icon__emoji">
-    </span>
-  </nav>
-  <section class="featured">
-    <h2 class="featured__title">Featured meals</h2>
-    <div class="featured__wrapper">
-      <article class="featured-meal">
-        <h4 class="featured-meal__title">Penne Broccoli</h4>
-        <button class="featured-meal__button"><span>➕</span></button>
-      </article>
-      <article class="featured-meal">
-        <h4 class="featured-meal__title">Penne Broccoli</h4>
-        <button class="featured-meal__button"><span>➕</span></button>
-      </article>
-      <article class="featured-meal">
-        <h4 class="featured-meal__title">Penne Broccoli</h4>
-        <button class="featured-meal__button"><span>➕</span></button>
-      </article>
-      <article class="featured-meal">
-        <h4 class="featured-meal__title">Penne Broccoli</h4>
-        <button class="featured-meal__button"><span>➕</span></button>
-      </article>
+    <hgroup>
+        <h1 class="header__title">Easy to read</h1>
+        <h4 class="header__subtitle">Simple knowledge to learn quickly.</h4>
+    </hgroup>
+</header>
+ <main class="grid">
+    <div class="grid__hero-item">
+        <h5 class="hero-item__title">
+            Daily language
+        </h5>
+        <h6 class="hero-item__subtitle">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        </h6>
     </div>
-  </section>
-  <section class="recipes">
-    <ul class="recipes__list">
-      <li class="recipe"><span class="recipe__name">Pasta Carbonara</span><button class="recipe__btn">➕</button></li>
-      <li class="recipe"><span class="recipe__name">Lasagna</span><button class="recipe__btn">➕</button></li>
-    </ul>
-  </section>
+     <div class="grid-item">
+        <img src="https://i.pinimg.com/564x/b6/28/6e/b6286e4555719127578b4e9eb3a09b50.jpg" class="grid-item__photo">
+        <h5 class="grid-item__title">The power of music</h5>
+        <p class="grid-item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+     <div class="grid-item">
+        <img src="https://i.pinimg.com/564x/9e/c6/fa/9ec6fabcf262681c275c950dd68d5ef5.jpg" class="grid-item__photo">
+        <h5 class="grid-item__title">The power of music</h5>
+        <p class="grid-item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. More stuff here to
+            make this looooooong text</p>
+    </div>
+     <div class="grid-item">
+        <img src="https://i.pinimg.com/564x/db/7f/0b/db7f0b1278fcdb2c70165b45452f3c1b.jpg" class="grid-item__photo">
+        <h5 class="grid-item__title">The power of music</h5>
+        <p class="grid-item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+     <div class="grid-item">
+        <img src="https://i.pinimg.com/564x/17/05/c3/1705c360f5881b4039a4f787bc9ed26c.jpg" class="grid-item__photo">
+        <h5 class="grid-item__title">The power of music</h5>
+        <p class="grid-item__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+ </main>
 
 </body>
 
